<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Suger Time</string>
    <string name="phone_name">Phone number</string>
    <string name="input_phone_name">Please enter your cell phone number</string>
    <string name="text_view_continue">Continue</string>
    <string name="text_enter_code">Enter your code</string>
    <string name="text_phone_number">+86135 5324 8751</string>
    <string name="text_get_new_code">I dont get a code (60)</string>
    <string name="text_set_pro_file">Set your profile</string>
    <string name="input_name">Name</string>
    <string name="input_password">Password</string>
    <string name="input_year">DD/MM/YY</string>
    <string name="text_upload_phone">Upload a real phone of yourself</string>
    <string name="text_set_password">Setting up a 6-bit password</string>
    <string name="text_input_password">Password</string>
    <string name="text_enter_password">Enter your password</string>
    <string name="text_check_password">Check your password</string>
    <string name="text_super_time">Sugertime</string>
    <string name="text_square">Square</string>
    <string name="text_message">Message</string>
    <string name="text_me">Hello</string>
    <string name="text_visits">Follower</string>
    <string name="text_visits_number">0</string>
    <string name="text_follower">Fans</string>
    <string name="text_Setting">Visits</string>
    <string name="text_setting_about_us">About us</string>
    <string name="text_setting_terms_service">Terms of service</string>
    <string name="text_setting_contanct_us">Contanct us</string>
    <string name="text_setting_log_out">Log Out</string>
    <string name="text_setting_delete">Delete</string>


    <string name="userinfo_update_failed">fail to upload</string>
    <string name="network_is_not_available">Network connection failed, please check your network Settings</string>
    <string name="password_is_empty">enter your password</string>
    <string name="passwordCheck_is_empty">Please enter your password again</string>
    <string name="password_no_passwordCheck">Two different passwords</string>

    <string name="input_name_info">Please enter your nickname</string>
    <string name="select_sex">Please select gender</string>
    <string name="select_birthday">Please select date of birth</string>
    <string name="start_session_record">I initiated the whiteboard demonstration</string>
    <string name="session_end_record">The whiteboard presentation is over</string>

    <string name="text_phone_no_empty">Cell phone number cannot be empty</string>
    <string name="text_device_no_empty">Mobile device cannot be empty</string>
    <string name="text_message_send_successfully">SMS successfully sent</string>
    <string name="text_message_send_failed">SMS failed to send</string>
    <string name="text_phone_prefix_empty">The phone number prefix area parameter is empty</string>
    <string name="new_message_count_max">…</string>
    <string name="club">俱乐部</string>
    <string name="main_tab_discovery">动态</string>
    <string name="main_tab_chat">通讯</string>
    <string name="main_tab_contacts">人脉</string>
    <string name="main_tab_record">生涯</string>
    <string name="main_tab_me">我</string>
    <string name="more">更多</string>
    <string name="message_p2p_clear_tips">Make sure to empty the point-to-point history messages?</string>
    <string name="sure_keep_roam">Confirmation form reserved roaming</string>
    <string name="message_info">chat message</string>
    <string name="message_history_query">Cloud message logging</string>
    <string name="message_clear">Clear the local message record</string>
    <string name="message_p2p_clear">Clear point-to-point history messages</string>
    <string name="input_panel_file">send file</string>
    <string name="readed">unread</string>
    <string name="unread">readed</string>
    <string name="ack_msg_info">The message has been read in detail</string>
    <string name="create_normal_team">Create discussion groups</string>
    <string name="msg_notice">message reminding </string>
    <string name="input_panel_ack_msg">read receipt</string>
    <string name="input_panel_guess">猜 拳</string>
    <string name="input_panel_RTS">白 板</string>
    <string name="input_panel_snapchat">阅后即焚</string>
    <string name="input_panel_tip">Tip</string>
    <string name="send_ack_msg">Send a read back message</string>
    <string name="report_one">Pronographic,</string>
    <string name="report_two">Politically senstive,</string>
    <string name="report_three">Ilegal violence,</string>
    <string name="report_fore">Illeegal items,</string>
    <string name="report_five">Gambling,</string>
    <string name="report_six">Stolrn photo,</string>
    <string name="report_seven">Bloody violence,</string>
    <string name="report_eight">False user,</string>
    <string name="report_nine">oter...,</string>
    <string name="report_ten">Financial fraud,</string>
    <string name="report_elven">Part...fraud,</string>
    <string name="report_zero">Other fraud,</string>
    <string name="report_one_two">Advertisenment,</string>
    <string name="report_one_three">Insult/abuse,</string>
    <string name="report_one_fore">Other...</string>
</resources>
