<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_color">

    <TextView
        style="@style/text_title_style"
        android:text="@string/text_set_password" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_14"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/black_color"
        android:text="@string/text_input_password"/>
    <EditText
        android:id="@+id/edit_input_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/register_background"
        android:inputType="textPassword"
        android:hint="@string/text_enter_password"
        android:paddingLeft="@dimen/dp_10"
        android:textColor="@color/line_color"
        android:textColorHint="@color/line_color"
        android:textSize="@dimen/sp_14" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_14"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"
        android:textColor="@color/black_color"
        android:text="@string/text_check_password"/>
    <EditText
        android:id="@+id/edit_check_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:inputType="textPassword"
        android:background="@drawable/register_background"
        android:hint="@string/text_check_password"
        android:paddingLeft="@dimen/dp_10"
        android:textColor="@color/line_color"
        android:textColorHint="@color/line_color"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/text_button_continue"
        style="@style/button_title_style" />

</LinearLayout>