<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_color">

    <TextView
        style="@style/text_title_style"
        android:text="@string/phone_name"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@drawable/register_background">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+86"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_centerVertical="true"
            android:textColor="@color/black_color"/>

        <View
            android:id="@+id/line_view"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_0_5"
            android:layout_marginTop="@dimen/dp_0_5"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@color/line_color"
            android:layout_toRightOf="@+id/text_view"/>

        <EditText
            android:id="@+id/edit_text_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_phone_name"
            android:textColorHint="@color/line_color"
            android:textColor="@color/line_color"
            android:maxLength="11"
            android:textSize="@dimen/sp_13"
            android:paddingLeft="@dimen/dp_0_5"
            android:inputType="number"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/line_view"
            />

    </RelativeLayout>

    <TextView
        style="@style/button_title_style"
        android:id="@+id/text_view_next"
        android:text="@string/text_view_continue"
       />

</LinearLayout>