<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical">

    <TextView
        style="@style/text_title_style"
        android:text="@string/text_set_pro_file" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/register_background"
        android:hint="@string/input_name"
        android:paddingLeft="@dimen/dp_10"
        android:textColor="@color/line_color"
        android:textColorHint="@color/line_color"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/frame_layout_fale"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/register_background">

            <ImageView
                android:id="@+id/image_fele"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/icon_male" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_layout_female"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/register_background">

            <ImageView
                android:id="@+id/image_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/icon_female" />
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/register_background"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        android:text="@string/input_year"
        android:textColor="@color/line_color"
        android:textSize="@dimen/sp_14" />
    <TextView
        android:id="@+id/button_text_continue"
        style="@style/button_title_style" />
</LinearLayout>